--- a/main.css
+++ b/main.css
@@ -1,43 +1,61 @@
 .text {
-	font-family: 'Roboto Black', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 }
 
-.navbar-header {
-	border: none;
-	border-radius: 0;
-	background-color: rgba(0,0,0,0.5);
+.navbar {
+    font-family: Montserrat, sans-serif;
+    margin-bottom: 0;
+    border: 0;
+    font-size: 11px !important;
+    letter-spacing: 3px;
 }
 
-.navbar .navbar-nav {
-  display: inline-block;
-  float: none;
-  vertical-align: top;
+.nav-tabs li a {
+    color: #777;
 }
 
-.navbar ul{
-	font-size: 17px;
+.navbar li a, .navbar .navbar-brand { 
+      color: black !important;
+}
+.navbar-nav li a:hover {
+    color: #fff !important;
+}
+.navbar-nav li.active a {
+    color: #fff !important;
+    background-color: #29292c !important;
+}
+.navbar-default .navbar-toggle {
+    border-color: transparent;
+} .open .dropdown-toggle {
+    color: #fff;     
+    background-color: #555 !important;
+}
+.dropdown-menu li a {
+    color: #000 !important;
+    letter-spacing: 0;
+}
+.dropdown-menu li a:hover {
+    background-color: red !important;
 }
 
 #maindiv {
 	background-image: url(GP_GKC_v01_A02.jpg);
 	height: 750px;
 	background-size: cover;
-	position: relative;
 }
 
 #header h1 {
 	color: white;
 	position: relative;
 	top: 50px;
-	padding-left: 5%;
+	padding-left: 2%;
 	font-size: 400%;
 }
 
 #seconddiv {
-	width: 100%;
-	height:650px;
 	background-color: #c7d9eb;
 	background-size: cover;
+	height: 650px;
 }
 
 #seconddiv h1 {
@@ -45,6 +63,7 @@
 	font-size: 250%;
 	left: 30%;
 	top: 100px;
+	padding-top: 0;
 	position: relative;
 }
 
@@ -63,6 +82,7 @@
 	position: relative;
 	width: 650px;
 	font-size: 140%;
+	margin:0;
 }
 
 .footer-distributed{
@@ -164,7 +184,6 @@
 	color:  #5383d3;
 	text-decoration: none;;
 }
-
 
 /* Footer Right */
 
