--- a/main.css
+++ b/main.css
@@ -56,6 +56,8 @@
 	background-color: #c7d9eb;
 	background-size: cover;
 	height: 650px;
+	position:relative;
+	top:-20px;
 }
 
 #seconddiv h1 {
@@ -93,6 +95,8 @@
 	text-align: left;
 	font: bold 16px sans-serif;
 	padding: 25px 55px;
+	position:relative;
+	top:-20px;
 }
 
 .footer-distributed .footer-left,
@@ -106,6 +110,7 @@
 
 .footer-distributed .footer-left{
 	width: 40%;
+
 }
 
 /* The company logo */
