--- a/main.css
+++ b/main.css
@@ -38,18 +38,48 @@
     background-color: red !important;
 }
 
-#maindiv {
-	background-image: url(GP_GKC_v01_A02.jpg);
-	height: 750px;
-	background-size: cover;
+.container {
+    padding: 80px 120px;
+}
+.person {
+    border: 10px solid transparent;
+    margin-bottom: 25px;
+    width: 80%;
+    height: 80%;
+    opacity: 0.7;
+}
+.person:hover {
+    border-color: #f1f1f1;
 }
 
-#header h1 {
-	color: white;
+.carousel-indicators {
 	position: relative;
-	top: 50px;
-	padding-left: 2%;
-	font-size: 400%;
+	top: 700px;
+}
+
+#myCarousel {
+	height: 710px;
+	top:0;
+}
+
+.carousel-inner img {
+    width: 100%; /* Set width to 100% */
+}
+
+.carousel-caption h3 {
+    color: #fff !important;
+    margin-bottom: 0;
+}
+
+.carousel-caption p {
+	color: #fff;
+	padding-bottom: 15px;
+}
+
+@media (max-width: 600px) {
+    .carousel-caption {
+    	display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
+    }
 }
 
 #seconddiv {
@@ -57,14 +87,13 @@
 	background-size: cover;
 	height: 650px;
 	position:relative;
-	top:-20px;
 }
 
 #seconddiv h1 {
 	color: #65c3fb;
 	font-size: 250%;
 	left: 30%;
-	top: 100px;
+	top: 70px;
 	padding-top: 0;
 	position: relative;
 }
@@ -72,7 +101,7 @@
 #seconddiv h3 {
 	color: white;
 	left: 30%;
-	top: 100px;
+	top: 70px;
 	position: relative;
 	width: 650px;
 }
@@ -80,7 +109,7 @@
 #seconddiv p {
 	color: #999;
 	left: 30%;
-	top: 100px;
+	top: 70px;
 	position: relative;
 	width: 650px;
 	font-size: 140%;
