--- a/current-works.css
+++ b/current-works.css
@@ -47,28 +47,53 @@
 }
 
 #maindiv {
-	background-color: #c7d9eb;
+	background-color: #fff;
 	height: 750px;
 }
 
-#slide1 .w3-content{
-	position: absolute;
-	left: 5%;
-	float: left;
-	top: 150px;
+.container {
+    position: relative;
+    width: 50%;
+    top: 65px;
+    left: 2%;
+    float: left;
+    display: inline-block;
+    padding: 7px;
 }
 
-#slide1 h5 {
-	background-color: rgba(0, 0,0, 0.4);
-	top:150px;
-	font-size: 175%;
-	left: 5%;
-	margin: 0;
+.image {
+  opacity: 1;
+  display: block;
+  width: 50%;
+  height: 50%;	
+  transition: .5s ease;
+  backface-visibility: hidden;
 }
 
-#slide1 .mySlides {
-	height: 400px;
-	width: 600px;
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 25%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%)
+}
+
+.container:hover .image {
+  opacity: 0.3;
+}
+
+.container:hover .middle {
+  opacity: 1;
+}
+
+.imagetext {
+  background-color: #4CAF50;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
 }
 
 .footer-distributed{
