--- a/main.css
+++ b/main.css
@@ -41,16 +41,6 @@
 .container {
     padding: 80px 120px;
 }
-.person {
-    border: 10px solid transparent;
-    margin-bottom: 25px;
-    width: 80%;
-    height: 80%;
-    opacity: 0.7;
-}
-.person:hover {
-    border-color: #f1f1f1;
-}
 
 .carousel-indicators {
 	position: relative;
@@ -60,15 +50,13 @@
 #myCarousel {
 	height: 710px;
 	top:0;
-}
-
-.carousel-inner img {
-    width: 100%; /* Set width to 100% */
+	padding-right: 0;
 }
 
 .carousel-caption h3 {
     color: #fff !important;
     margin-bottom: 0;
+    width: 100%;
 }
 
 .carousel-caption p {
@@ -76,17 +64,14 @@
 	padding-bottom: 15px;
 }
 
-@media (max-width: 600px) {
-    .carousel-caption {
-    	display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
-    }
-}
-
 #seconddiv {
 	background-color: #c7d9eb;
 	background-size: cover;
 	height: 650px;
+	padding-right: 0;
+	top: 20px;
 	position:relative;
+	width: 100%;
 }
 
 #seconddiv h1 {
@@ -139,7 +124,6 @@
 
 .footer-distributed .footer-left{
 	width: 40%;
-
 }
 
 /* The company logo */
