--- a/current-works.css
+++ b/current-works.css
@@ -48,23 +48,22 @@
 
 #maindiv {
 	background-color: #fff;
-	height: 750px;
+	height: 950px;
 }
 
 .container {
     position: relative;
-    width: 50%;
+    width: 475px !important;
     top: 65px;
-    left: 2%;
-    float: left;
+    left: 7px;
+    padding-bottom: 30px;
     display: inline-block;
-    padding: 7px;
 }
 
 .image {
   opacity: 1;
   display: block;
-  width: 50%;
+  width: 100%;
   height: 50%;	
   transition: .5s ease;
   backface-visibility: hidden;
@@ -76,7 +75,7 @@
   opacity: 0;
   position: absolute;
   top: 50%;
-  left: 25%;
+  left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%)
 }
@@ -195,7 +194,6 @@
 	color:  #5383d3;
 	text-decoration: none;;
 }
-
 
 /* Footer Right */
 
